tests/golden/type_errors/or_pattern_binding_type_mismatch.cd
enum Mixed {
  Number(value: number),
  Text(value: string),
}
let value = Mixed.Number(1);
print match value {
  Mixed.Number(value) | Mixed.Text(value) => "value",
};
