tests/golden/type_errors/or_pattern_binding_type_mismatch.err
Type error at 7:23: OR pattern binding `value` has incompatible types: number and string
    Mixed.Number(value) | Mixed.Text(value) => "value",
                        ^
